# quantum

./: .env.example  .gitignore  00_debug.html  01_ground.html  02_mario.html  03_tilemap.html  04_animated.html  05_animated.html  06_physics.html  06_smw.html  07_camera.html  08_fullmap.html  08_map.html  09_coin.html  09_collect.html  10_hud.html  11_enemies.html  12_gameover.html  13_sounds.html  14_complete.html  14_multiscene.html  14_scenes.html  15_qblocks.html  16_stomp.html  17_powerups.html  18_enemyai.html  19_checkpoints.html  20_full.html  20_full_level.html  AI_FEATURES.md  ARCHITECTURE.md  Application.q  CONTRIBUTING.md  Cprojetosquantumdebug_post.txt  Cprojetosquantumtest_post_live.txt  Cprojetosquantumtmp_collect.txt  Cprojetosquantumtmp_logs.txt  Dockerfile  FEATURE_STRUCTURE_SPEC.md  FEATURE_WORKFLOW.md  (+89 more)
benchmarks/: README.md  __init__.py  bench_ast_cache.py  bench_comparisons.py  bench_core.py  bench_data.py  bench_databinding.py  bench_expression_cache.py  bench_optimization_comparison.py  bench_python.py  compare_platforms.py  framework.py  run_all.py
components/: Button.q  Card.q  Layout.q  TestCLI.q  admin_panel.q  agent_demo.q  ai_chat.q  array_demo.q  bank_transfer_demo.q  blog_crud.q  complete_demo.q  contact_form.q  contact_success.q  dashboard.q  debug_scopes.q  demo.q  dev_tools_demo.q  editor_panel.q  email_demo.q  function_examples.q  function_rest_api.q  hello.q  htmx_add_todo.q  htmx_click.q  htmx_counter.q  htmx_demo.q  htmx_search.q  index.q  islands_demo.q  llm_demo.q  login.q  login_simple.q  logout.q  minimal_session.q  products.q  rag_demo.q  session_demo.q  session_test.q  simple_rag.q  simple_todo.q  (+6 more)
deploy/: .dockerignore  Dockerfile  Dockerfile.deploy-service  docker-compose.forge.yml
docs/: UNIFIED_QUERY_GUIDE.md  index.md
examples/: adventure.q  agent_demo.q  agent_multi_provider.q  animations_demo.q  api-tests.q  api.q  basic-tests.q  browser-tests.q  chat-messages.q  chat-tui.q  chat.q  complete-test.q  component_library_demo.q  counter.q  dashboard-ui.q  dashboard.q  fetch-example.q  fighter.q  filebrowser.q  form_validation.q  hello.q  hello_world.q  job-queue-example.q  job-schedule-example.q  job-thread-example.q  job_execution_demo.q  kenney_platformer.q  llm_demo.q  mario.q  message-queue-example.q  message_queue_demo.q  multi_agent_support.q  platformer.q  python-data-processing.q  python-scripting.q  quantum-assistant.q  rag.q  simple-if.q  smw_polished.q  smw_simple.q  (+131 more)
medium-posts/: README.md  SERIES_ORDER.md
playground/: index.html  playground-worker.js  playground.css  playground.js  pyodide-worker.js  serve.py
quantum-as4/: .gitignore  ADOBE_EXAMPLES_TEST_REPORT.md  BUG_REPORT_ELSE_BLOCKS.md  BUG_REPORT_THIS_PREFIX.md  GTK_DESKTOP_README.md  README.md  STATUS.md  (+15 more)
quantum-lsp/: README.md  pyproject.toml
quantum-lsp/quantum_lsp/: __init__.py  __main__.py  capabilities.py  server.py
quantum-lsp/quantum_lsp/analysis/: __init__.py  document.py  symbols.py  workspace.py
quantum-lsp/quantum_lsp/handlers/: __init__.py  completion.py  definition.py  diagnostics.py  formatting.py  hover.py  references.py  symbols.py
quantum-lsp/quantum_lsp/schema/: __init__.py  attributes.py  tags.py  types.py
quantum-lsp/quantum_lsp/utils/: __init__.py  position.py
quantum-lsp/tests/: __init__.py  test_server.py
(+1243 files in other folders)
