[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantum-lsp"
version = "1.0.0"
description = "Language Server Protocol implementation for Quantum Framework"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Daniel", email = "daniel@quantum.dev" }
]
keywords = ["quantum", "lsp", "language-server", "ide", "xml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]
requires-python = ">=3.10"
dependencies = [
    "pygls>=1.2.0",
    "lsprotocol>=2023.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
quantum-lsp = "quantum_lsp:main"

[project.urls]
Homepage = "https://github.com/quantum-framework/quantum-lsp"
Documentation = "https://quantum-framework.github.io/quantum-lsp"
Repository = "https://github.com/quantum-framework/quantum-lsp"

[tool.hatch.build.targets.wheel]
packages = ["quantum_lsp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
